--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".vue.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -154,7 +154,7 @@
                 app:srcCompat="@drawable/normal" />
 
             <TextView
-                android:id="@+id/lblMG"
+                android:id="@+id/lblIMG"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
